first full draft of biometrics paper

--- a/report/pers_schedule/biometrics_submission/mainmatter/pers_sched_framework/estimation.tex
+++ b/report/pers_schedule/biometrics_submission/mainmatter/pers_sched_framework/estimation.tex
@@ -7,7 +7,7 @@ Since there is no closed form solution available for $E_g[T^*_j]$, for its estim
 \label{eq : expected_time_survprob}
 E_g[T^*_j] = t + \int_t^\infty \pi_j(u \mid t, s) \rmn{d} u
 \end{equation}
-There is no closed form solution available for the integral in \ref{eq : expected_time_survprob} either, and hence we approximate it using Gauss-Kronrod quadrature. We preferred this approach over Monte Carlo methods to estimate $E_g[T^*_j]$ from the PPD $g(T^*_j)$, because sampling directly from $g(T^*_j)$ involved an additional step of sampling from the distribution $p(T^*_j \mid T^*_j > t, \boldsymbol{b_j}, \boldsymbol{\theta})$, as compared to the estimation of $\pi_j(u \mid t, s)$ \citep{rizopoulos2011dynamic}. The latter approach was thus computationally faster. As mentioned earlier, a limitation of $E_g[T^*_j]$ is that it is practically useful only when the $\mbox{var}_g[T^*_j]$ is small, which is given by:
+There is no closed form solution available for the integral in (\ref{eq : expected_time_survprob}) either, and hence we approximate it using Gauss-Kronrod quadrature. We preferred this approach over Monte Carlo methods to estimate $E_g[T^*_j]$ from the PPD $g(T^*_j)$, because sampling directly from $g(T^*_j)$ involved an additional step of sampling from the distribution $p(T^*_j \mid T^*_j > t, \boldsymbol{b_j}, \boldsymbol{\theta})$, as compared to the estimation of $\pi_j(u \mid t, s)$ \citep{rizopoulos2011dynamic}. The latter approach was thus computationally faster. As mentioned earlier, a limitation of $E_g[T^*_j]$ is that it is practically useful only when the $\mbox{var}_g[T^*_j]$ is small, which is given by:
 \begin{equation}
 \label{eq : var_time_survprob}
 \mbox{var}_g[T^*_j] = 2 \int_t^\infty {(u-t) \pi_j(u \mid t, s) \rmn{d} u} - \Big\{\int_t^\infty \pi_j(u \mid t, s) \rmn{d} u\Big\}^2
@@ -21,7 +21,7 @@ For schedules based on dynamic risk of GR, the value of $\kappa$ dictates the bi
 
 In cases where the choice of $k$ cannot be based on the input of the physician or the patients, we propose to automate the choice of this threshold parameter. More specifically, we propose to choose a $\kappa$ for which a binary classification accuracy measure \citep{lopez2014optimalcutpoints,sokolova2009systematic}, discriminating between cases and controls, is maximized. In PRIAS, cases are patients who experience GR and the rest are controls. However, a patient can be in control group at some time $t$ and in the cases at some future time point $t + \Delta t$, and thus time dependent binary classification is more relevant. In joint models, a patient $j$ is predicted to be a case if $\pi_j(t + \Delta t \mid t,s) \leq \kappa$ and a control if $\pi_j(t + \Delta t \mid t,s) > \kappa$ \citep{rizopoulosJMbayes}. The time window $\Delta t$ can be automatically chosen as $\argmax_{\Delta t}AUC(t, \Delta t, s)$, the latter being a measure of discriminative capability of the model \citep{rizopoulosJMbayes}. However such a time window may not be clinically relevant at all. In AS programs at any point in time, it is of interest to identify patients who may obtain GR in the next 1 year from those who do not, so that they can be provided immediate attention (in exceptional cases a biopsy within an year of the last one). Thus, in this work we use a $\Delta t$ of 1 year.
 
-In regards to automatic selection of the threshold $\kappa$ using binary classification accuracy measures, our goal is to focus on patients whose true time of GR falls in the time window $\Delta t$. To this end, the measure which combines both sensitivity and precision is $F_1$-Score. It is defined as:
+For automatic selection of the threshold $\kappa$, we require a binary classification accuracy measure which is in line with the goal to focus on patients whose true time of GR falls in the time window $\Delta t$. To this end, the measure which combines both sensitivity and precision is $F_1$-Score. It is defined as:
 \begin{align*}
 F_1(t, \Delta t, s) &= 2\frac{\mbox{TPR}(t, \Delta t, s) \mbox{PPV}(t, \Delta t, s)}{\mbox{TPR}(t, \Delta t, s) + \mbox{PPV}(t, \Delta t, s)}, F_1 \epsilon [0,1],\\
 \mbox{TPR}(t, \Delta t, s) &= \mbox{Pr}\big\{\pi_j(t + \Delta t \mid t,s) \leq \kappa \mid T^*_j \epsilon (t, t + \Delta t]\big\},\\
