--- a/report/pers_schedule/biometrics_submission/mainmatter/pers_schedule_prias.tex
+++ b/report/pers_schedule/biometrics_submission/mainmatter/pers_schedule_prias.tex
@@ -36,7 +36,7 @@ Using the demonstration dataset, we next present the functioning of personalized
 
 \begin{figure}
 \centerline{\includegraphics[width=\columnwidth]{images/prias_demo/variance_3174_911.png}}
-\caption{Standard deviation $\mbox{S.D.}[T^*_j] = \sqrt{\mbox{var}_g[T^*_j]}$ over time for patient 3174 and 911. Solid vertical lines indicate biopsies.}
+\caption{Standard deviation $\mbox{SD}[T^*_j] = \sqrt{\mbox{var}_g[T^*_j]}$ over time for patient 3174 and 911. Solid vertical lines indicate biopsies.}
 \label{fig : variance_pred_dist_3174_911}
 \end{figure}
 
