--- a/report/pers_schedule/biometrics_submission/mainmatter/pers_sched_framework/pers_biopsy_framework.tex
+++ b/report/pers_schedule/biometrics_submission/mainmatter/pers_sched_framework/pers_biopsy_framework.tex
@@ -1,7 +1,7 @@
 % !TEX root =  ../pers_schedules.tex 
 \section{Personalized schedules for repeat biopsies}
 \label{sec : pers_sched_approaches}
-Once a joint model for GR and PSA levels is obtained, the next step is to use it to create personalized schedules for biopsies. To elucidate the scheduling methods, let us assume that a personalized schedule is to be created for a new patient enumerated $j$, who is not present in the original sample of patients $\mathcal{D}_n$. Further let us assume that this patient did not have a GR at his last biopsy performed at time $t$, and that the PSA levels are available up to a time point $s$. The goal is to find the optimal time $u \geq \text{max}(t,s)$ of the next biopsy. 
+Once a joint model for GR and PSA levels is obtained, the next step is to use it to create personalized schedules for biopsies. To elucidate personalized schedules, let us assume that a personalized schedule is to be created for a new patient enumerated $j$, who is not present in the original sample of patients $\mathcal{D}_n$. Further let us assume that this patient did not have a GR at his last biopsy performed at time $t$, and that the PSA levels are available up to a time point $s$. The goal is to find the optimal time $u \geq \text{max}(t,s)$ of the next biopsy. 
 
 \input{mainmatter/pers_sched_framework/ppd_time_to_GR}
 \input{mainmatter/pers_sched_framework/loss_functions}
@@ -9,7 +9,7 @@ Once a joint model for GR and PSA levels is obtained, the next step is to use it
 
 \subsection{Algorithm}
 \label{subsec : pers_sched_algorithm}
-Given the personalized scheduling methods, the next step is to iteratively create an entire schedule until GR is detected for the patient. To this end, the algorithm in Figure \ref{fig : sched_algorithm} elucidates the process of creating a personalized schedule for patient $j$. Since PRIAS and most AS programs strongly advise against conducting more than 1 biopsy per year, the algorithm adjusts the optimal time $u$ of biopsy in case the last biopsy was performed less than an year ago.
+Given the various methods for personalized schedules, the next step is to iteratively create an entire schedule until GR is detected for the patient. To this end, the algorithm in Figure \ref{fig : sched_algorithm} elucidates the process of creating a personalized schedule for patient $j$. Since PRIAS and most AS programs strongly advise against conducting more than 1 biopsy per year, the algorithm adjusts the optimal time $u$ of biopsy in case the last biopsy was performed less than an year ago.
 
 %When submitting replace figure with figure* to make it span an entire column
 %With referee option it gives an error
