--- a/report/pers_schedule/biometrics_submission/mainmatter/sim_study.tex
+++ b/report/pers_schedule/biometrics_submission/mainmatter/sim_study.tex
@@ -6,99 +6,85 @@ The application of personalized schedules for patients from PRIAS demonstrated t
 
 \subsection{Simulation setup}
 \label{subsec : simulation_setup}
-\subsubsection{Patient population}
 First we assume a population of patients enrolled in AS, whose PSA and hazard of GR follows a joint model of the form postulated in Section \ref{subsec : jm_fit_prias}, with parameters equal to the posterior mean of parameters (CHECK WEB SUPPLEMENTARY SECTION...) estimated from the joint model fitted to PRIAS dataset. We assume that the patients in population belong to 3 equal sized subgroups $G_1, G_2, G_3$ with different failure times. The failure times are controlled by different Weibull distributed baseline hazards for each. The shape and scale parameters $(k, \lambda$) for the 3 subgroups are: $(1.5, 4)$, $(3, 5)$ and $(4.5, 6)$ for $G_1, G_2$ and $G_3$ respectively. The effect of these parameters is that the variance in GR times is highest for $G_1$ and lowest for $G_3$, while the mean GR time is lowest in $G_1$ and highest in $G_3$.
 
-From the population we randomly sample a total of 408 datasets with 1000 patients each. Each dataset is split into a training (750 patients) and a test (250 patients) part. The $k$-th simulated training dataset $\mathcal{D}^k$ is given by $\mathcal{D}^k = \{l_{ki}, r_{ki}, \boldsymbol{y}_{ki}; i = 1, \ldots, 750\}$, where $\boldsymbol{y}_{ki}$ denote the PSA measurements for the $i$-th patient in $\mathcal{D}^k$. The frequency of PSA measurements is same as that in PRIAS. Other than simulating a true GR time $T^*_{ki}$, we also generate a random and non-informative censoring time $C_{ki}$. When $T_{ki} < C^*_{ki}$, then $l_{ki} = r_{ki} = T^*_{ki}$, otherwise $l_{ki} = C_{ki}$ and $r_{ki} = \infty$. For the test patients, censoring time is not generated.
+From the population we randomly sample a total of 408 datasets with 1000 patients each. Patients are randomly assigned to a subgroup. Further, each dataset is split into a training (750 patients) and a test (250 patients) part. The $k$-th simulated training dataset $\mathcal{D}^k$ is given by $\mathcal{D}^k = \{l_{ki}, r_{ki}, \boldsymbol{y}_{ki}; i = 1, \ldots, 750\}$, where $\boldsymbol{y}_{ki}$ denote the PSA measurements for the $i$-th patient in $\mathcal{D}^k$. The frequency of PSA measurements is same as that in PRIAS. Other than simulating a true GR time $T^*_{ki}$, we also generate a random and non-informative censoring time $C_{ki}$. When $T_{ki} < C^*_{ki}$, then $l_{ki} = r_{ki} = T^*_{ki}$, otherwise $l_{ki} = C_{ki}$ and $r_{ki} = \infty$. For the test patients, censoring time is not generated.
 
-Next we fit a joint model of the specification given in \ref{eq : long_model_prias} and \ref{eq : hazard_prias} to each of the $\mathcal{D}^k, k=1,
+Next we fit a joint model of the specification given in (\ref{eq : long_model_prias}) and (\ref{eq : hazard_prias}) to each of the $\mathcal{D}^k, k=1,
 \ldots, 408$, and obtain posterior distribution of parameters $p(\boldsymbol{\theta} \mid \mathcal{D}^k)$. Using the latter, we obtain the PPD $g(T^*_{kj})$ for the $j$-th test patient and conduct hypothetical biopsies iteratively in accordance with the algorithm in Figure \ref{fig : sched_algorithm}. 
 
 \subsection{Estimation}
-For estimation of the optimal $\kappa = \argmax_{\kappa} F_1(t, \Delta t, s)$, we use a grid search approach. That is, $F_1$ is computed using the training dataset over a fine grid of $\kappa$ values in the interval $[0,1]$  and then the most optimal value is chosen.
-
-The next step is to estimate the measures of efficacy of schedules. To this end, we estimate $E[N^{bS}]$, $\mbox{var}[N^{bS}]$, $E[O^S]$ and $\mbox{var}[O^S]$ using pooled estimates of each from the 408 test datasets, as follows:
+To estimate the optimal $\kappa = \argmax_{\kappa} F_1(t, \Delta t, s)$, we use a grid search approach. That is, $F_1$ is computed using the training dataset over a fine grid of $\kappa$ values in the interval $[0,1]$ and $\kappa$ corresponding to the highest $F_1$ is chosen. 
+To compare schedules we require estimates of the various measures of efficacy of schedules (Section \ref{sec : choosing_schedule}). To this end, we compute pooled estimates of each of the $E[N^{bS}]$, $\mbox{var}[N^{bS}]$, $E[O^S]$ and $\mbox{var}[O^S]$, as below:
 \begin{align*}
 \widehat{E[O^S]} &= \frac{\sum_{k=1}^{254} n_k \widehat{E[O^S_k]}}{\sum_{k=1}^{254} n_k}, \\
 \widehat{\mbox{var}[O^S]} &= \frac{\sum_{k=1}^{254} (n_k - 1) \widehat{\mbox{var}[O^S_k]}}{\sum_{k=1}^{254} (n_k-1)}, 
 \end{align*}
-where $n_k$ are the number of test patients in the $k$-th simulation, $\widehat{E[O^S_k]} = {\sum_{j=1}^{n_k}O^S_{kj}}/{n_k}$ is the estimated mean and $\widehat{\mbox{var}[O^S_k]} = {\sum_{j=1}^{n_k}\big\{O^S_{kj} - \widehat{E[O^S_k]}\big\}^2}/{n_k-1}$ is estimated variance of the offset for the $k$-th simulation. The estimates for number of biopsies $N^{bS}$ are obtained similarly.
+where $n_k$ denotes the number of test patients, $\widehat{E[O^S_k]} = {\sum_{j=1}^{n_k}O^S_{kj}}/{n_k}$ is the estimated mean and $\widehat{\mbox{var}[O^S_k]} = {\sum_{j=1}^{n_k}\big\{O^S_{kj} - \widehat{E[O^S_k]}\big\}^2}/{n_k-1}$ is estimated variance of the offset for the $k$-th simulation. The estimates for number of biopsies $N^{bS}$ are obtained similarly.
 
 \subsection{Results}
-From the simulations we calculated the pooled estimates of the mean and variance of number of biopsies/offset for the entire sample. The estimates are plotted in Figure \ref{fig : meanNbVsOffset} and also summarized in Table \ref{table : sim_study_pooled_estimates}. From the figure it is evident that those schedules which conduct less biopsies on average, have a higher average offset, and vice versa. For example, the annual schedule conducts 5.2 biopsies on average, which is the highest among all schedules, however it has the least average offset of 6 months as well. On the other hand the schedule based on expected time of GR conducts only 1.9 biopsies on average, the least among all schedules but it also has the highest average offset of 15 months. The schedule based on median time of GR performs almost the same as that based on expected time of GR. As mentioned earlier the variance in number of biopsies and offset are important as well. In this regard annual schedule has the largest $\mbox{var}[N^{bS}]$ since it attempts to contain the offset within an year, and consequently it has the least $\mbox{var}[O^S]$. Schedules based on expected and median time of GR perform the opposite in terms of variance.
+The pooled estimates of the various measures of efficacy are summarized in Table \ref{table : sim_study_pooled_estimates}. In addition mean offset is plotted against mean number of biopsies in Figure \ref{fig : meanNbVsOffset}. From the figure it is evident that there is an inverse relationship between $E[N^{bS}]$ and $E[O^S]$. For example, the annual schedule conducts 5.2 biopsies on average, which is the highest among all schedules, however it has the least average offset of 6 months as well. On the other hand the schedule based on expected time of GR conducts only 1.9 biopsies on average, the least among all schedules but it also has the highest average offset of 15 months. The schedule based on median time of GR performs similar to that based on expected time of GR. Since the annual schedule attempts to contain the offset within an year it has the least $\mbox{var}[O^S]$. However to achieve so it conducts a wide range of biopsies from patient to patient, i.e. highest $\mbox{var}[N^{bS}]$. Schedules based on expected and median time of GR perform the opposite of annual schedule in terms of variance.
 
 \begin{figure}
-	\centerline{\includegraphics[width=\columnwidth]{images/sim_study/meanNbVsOffset_all.png}}
-	\caption{Estimated mean number of biopsies and mean offset (months) for the 7 scheduling methods using all patients. Method names are abbreviated for ease of graphing.}
-	\label{fig : meanNbVsOffset}
+\centerline{\includegraphics[width=\columnwidth]{images/sim_study/meanNbVsOffset_all.png}}
+\caption{Estimated mean number of biopsies and mean offset (months) for the 6 schedules, using all subgroups. Method names are abbreviated for better readability.}
+\label{fig : meanNbVsOffset}
 \end{figure}
 
 \begin{table}
-\caption{Pooled estimates of mean and variance of number of biopsies and offset for all patients.}
+\caption{Estimated mean and standard deviation of the number of biopsies and offset (months). Method names are abbreviated for consistency with Figure \ref{fig : meanNbVsOffset}.}
 \label{table : sim_study_pooled_estimates}
 \begin{tabular}{lrrrr}
 \Hline
-Schedule          & $E[N^{bS}]$ & $E[O^{S}]$ & $\mbox{var}[N^{bS}]$ & $\mbox{var}[O^S]$ \\  \hline
-Annual & 5.23           & 6.00               & 6.42          & 11.87             \\
-PRIAS & 4.85           & 8.46               & 5.52          & 74.22             \\
-Expected time of GR & 1.92           & 15.06              & 1.42          & 146.31          \\
-Median time of GR  & 2.06           & 13.89              & 2.00          & 139.73            \\
-$\text{F}_1$-Score  & 4.68           & 6.65               & 4.80          & 18.83             \\
-Mixed approach & 3.76          & 9.74               & 2.88          & 58.35             \\
+\multicolumn{5}{c}{a) All subgroups: 101823 patients}\\
 \hline
+Schedule          & $E[N^{bS}]$ & $E[O^{S}]$ & ${\mbox{SD}[N^{bS}]}$ & ${\mbox{SD}[O^S]}$ \\
+\hline
+Annual         & 5.24            & 6.01                & 2.53          & 3.45              \\
+Exp. Time GR & 1.92            & 15.06               & 1.19          & 12.11             \\
+Dyn. Risk GR       & 4.69            & 6.66                & 2.2           & 4.37              \\
+Med. Time GR & 2.07            & 13.87               & 1.42          & 11.8              \\
+Mixed       & 3.75            & 9.69                & 1.71          & 7.02              \\
+PRIAS          & 4.86            & 8.49                & 2.35          & 8.69\\
+\hline
+\multicolumn{5}{c}{b) Subgroup $G_1$: 33680 patients}\\
+\hline
+Schedule        & $E[N^{bS}]$ & $E[O^{S}]$ & ${\mbox{SD}[N^{bS}]}$ & ${\mbox{SD}[O^S]}$ \\
+\hline
+Annual         & 4.33            & 6.02                & 3.14          & 3.44              \\
+Exp. Time GR & 1.72            & 21.65               & 1.47          & 14.77             \\
+Dyn. Risk GR       & 3.85            & 6.76                & 2.69          & 4.45              \\
+Med. Time GR & 1.85            & 20.67               & 1.77          & 14.64             \\
+Mixed       & 3.24            & 10.24               & 2.17          & 7.73              \\
+PRIAS          & 4.05            & 7.98                & 2.87          & 8.08     \\
+\hline      
+\multicolumn{5}{c}{c) Subgroup $G_2$: 33907 patients}\\
+\hline
+Schedule        & $E[N^{bS}]$ & $E[O^{S}]$ & ${\mbox{SD}[N^{bS}]}$ & ${\mbox{SD}[O^S]}$ \\
+\hline
+Annual         & 5.18            & 5.99                & 2.13          & 3.48              \\
+Exp. Time GR & 1.78            & 13.53               & 0.98          & 9.82              \\
+Dyn. Risk GR       & 4.63            & 6.66                & 1.82          & 4.34              \\
+Med. Time GR & 1.9             & 12.31               & 1.16          & 9.43              \\
+Mixed       & 3.68            & 10.3                & 1.38          & 7.17              \\
+PRIAS          & 4.82            & 8.57                & 1.99          & 8.65        \\
+\hline      
+\multicolumn{5}{c}{d) Subgroup $G_3$: 34236 patients}\\
+\hline
+Schedule        & $E[N^{bS}]$ & $E[O^{S}]$ & ${\mbox{SD}[N^{bS}]}$ & ${\mbox{SD}[O^S]}$ \\
+\hline
+Annual         & 6.2             & 6.01                & 1.77          & 3.46              \\
+Exp. Time GR & 2.27            & 10.11               & 0.99          & 7.53              \\
+Dyn. Risk GR       & 5.57            & 6.58                & 1.56          & 4.32              \\
+Med. Time GR & 2.45            & 8.71                & 1.15          & 6.36              \\
+Mixed       & 4.31            & 8.54                & 1.27          & 5.91              \\
+PRIAS          & 5.7             & 8.92                & 1.73          & 9.27        \\
+\hline     
 \end{tabular}
 \end{table}
 
-We observe that the PRIAS schedule performs more or less the same as annual schedule. Despite this the latter may be preferred over PRIAS since it conducts only 0.38 biopsies more on average, however unlike PRIAS it has very low variance of offset, thus guaranteeing early detection for everyone. If we compare the PRIAS schedule with dynamic risk of GR based schedules, we can see that the schedule where $\kappa$ is chosen after maximizing $\text{F}_1$-Score, performs better than in PRIAS schedule in all aspects. The schedule where $\kappa$ is chosen after maximizing Youden's $J$ has a very large $\mbox{var}[O^S]$ and hence is not preferable over PRIAS. The mixed approach combines the benefits of methods with low $E[N^{bS}]$ and $\mbox{var}[N^{bS}]$, and those methods with low $E[O^{S}]$ and $\mbox{var}[O^S]$. It conducts 1.5 less biopsies than annual schedule on average and at 9.7 months the mean offset is less than an year.
+The PRIAS schedule conducts only 0.4 biopsies less than annual schedule, but with a higher variance of offset, it does not guarantee early detection for everyone. If we compare the PRIAS schedule with dynamic risk of GR based schedule, we can see that the latter performs better than PRIAS schedule in all aspects. The mixed approach combines the benefits of methods with low $E[N^{bS}]$ and $\mbox{var}[N^{bS}]$, and methods with low $E[O^{S}]$ and $\mbox{var}[O^S]$. It conducts 1.5 less biopsies than annual schedule on average and with $E[O^{S}]$ at 9.7 months it detects GR within an year since its occurrence on average. The variance in number of biopsies and offset are not only not high but also lesser than PRIAS schedule.
 
-\begin{table}
-\caption{Pooled estimates of mean and variance of number of biopsies and offset for subgroup $G_1$.}
-\label{table : sim_study_pooled_estimates_G1}
-\begin{tabular}{lrrrrr}
-\Hline
-Schedule           & Total Patients & $E[N^{bS}]$ & $E[O^{S}]$ & $\mbox{var}[N^{bS}]$ & $\mbox{var}[O^S]$ \\  \hline
-Annual              & 21004                  & 4.306           & 6.024               & 9.788          & 11.747             \\
-PRIAS              & 21004                  & 4.032           & 7.951               & 8.221          & 63.528             \\
-Expected time of GR & 21001                  & 1.922           & 15.114              & 1.441          & 149.167            \\
-Median time of GR  & 20937                  & 2.068           & 13.87               & 1.999          & 138.396            \\
-$\text{F}_1$-Score           & 21061                  & 4.689           & 6.648               & 4.863          & 18.745             \\
-Mixed approach     & 21004                  & 3.252           & 10.361              & 4.611          & 73.781             \\
-\hline
-\end{tabular}
-\end{table}
+We next discuss the performance of these schedules for each of the 3 subgroups $G_1, G_2$ and $G_3$. We observe that annual schedule remains the most consistent across subgroups in terms of the offset, but it varies the most in terms of number of biopsies, conducting 2 extra biopsies in subgroup $G_3$ (highest mean, low variance of GR time) than $G_1$ (low mean, high variance of GR time). The performance of schedule based on expected time of GR is the most consistent in terms of number of biopsies but most inconsistent in terms of offset. It performs the best subgroup $G_3$. For the dynamic risk of GR based schedule the dynamics are similar to that of the annual schedule. Unlike the latter two schedules, the PRIAS schedule not only conducts more biopsies in $G_3$ than $G_1$ but also has a higher offset for $G_3$ than $G_1$. As for the mixed approach, the dynamics are similar to that of annual schedule.
 
-\begin{table}
-\caption{Pooled estimates of mean and variance of number of biopsies and offset for subgroup $G_2$.}
-\label{table : sim_study_pooled_estimates_G2}
-\begin{tabular}{lrrrrr}
-\Hline
-Schedule           & Total Patients & $E[N^{bS}]$ & $E[O^{S}]$ & $\mbox{var}[N^{bS}]$ & $\mbox{var}[O^S]$ \\  \hline
-Annual              & 21160                  & 5.181           & 5.95                & 4.567          & 12.03              \\
-PRIAS              & 21160                  & 4.817           & 8.569               & 3.98           & 75.716             \\
-Expected time of GR & 21151                  & 1.927           & 15.078              & 1.447          & 144.333            \\
-Median time of GR  & 21189                  & 2.062           & 13.947              & 1.994          & 140.633            \\
-$\text{F}_1$-Score           & 21133                  & 4.666           & 6.663               & 4.726          & 18.956             \\
-Mixed approach     & 21160                  & 3.702           & 10.359              & 1.869          & 60.415             \\
-\hline
-\end{tabular}
-\end{table}
-
-\begin{table}
-\caption{Pooled estimates of mean and variance of number of biopsies and offset for subgroup $G_3$.}
-\label{table : sim_study_pooled_estimates_G3}
-\begin{tabular}{lrrrrr}
-\Hline
-Schedule           & Total Patients & $E[N^{bS}]$ & $E[O^{S}]$ & $\mbox{var}[N^{bS}]$ & $\mbox{var}[O^S]$ \\  \hline
-Annual              & 21222                  & 6.214           & 6.03                & 3.118          & 11.851             \\
-PRIAS              & 21222                  & 5.717           & 8.866               & 2.977          & 82.915             \\
-Expected time of GR  & 21234                  & 1.921           & 15.006              & 1.375          & 145.426            \\
-Median time of GR   & 21260                  & 2.07            & 13.879              & 2.016          & 140.14             \\
-Youden's $J$              & 21202                  & 4.541           & 8.02                & 4.061          & 112.559             \\
-Mixed approach     & 21222                  & 4.33            & 8.521               & 1.581          & 38.586             \\
-\hline
-\end{tabular}
-\end{table}
-
-We next check the performance of these methods for each of the 3 subgroups $G_1, G_2$ and $G_3$. Estimates of $E[N^{bS}]$, $\mbox{var}[N^{bS}]$, $E[O^S]$ and $\mbox{var}[O^S]$ for the 3 subgroups are presented in Table \ref{table : sim_study_pooled_estimates_G1}, Table \ref{table : sim_study_pooled_estimates_G2} and Table \ref{table : sim_study_pooled_estimates_G3}. We observe that all of the schedules which are based on personalized methods, i.e. expected time of GR, median time of GR and dynamic risk of GR based schedules perform the same across the subgroups, with trivial differences in estimates. On the other hand, the annual schedule conducts 6 biopsies on average for patients in $G_3$ as compared to 4 for patients in $G_1$. It also has $\mbox{var}[N^{bS}]$ 3 times more for patients in $G_1$ compared to $G_3$. This can be attributed to the former having higher variance in GR times. However for annual schedule the $E[O^S]$ and $\mbox{var}[O^S]$ remain almost the same in all groups and it always detects GR within an year of the occurrence. The PRIAS schedule differs for the 3 subgroups as well. For number of biopsies the dynamics are similar to that of annual schedule. However for offset, the PRIAS schedule has high $E[O^S]$ and $\mbox{var}[O^S]$ for patients from $G_3$, i.e. patients who obtain GR later. As for the mixed approach, we observe that it conducts more biopsies on average for patients from $G_3$, however it also has the least $E[O^S]$, $\mbox{var}[O^S]$ and $\mbox{var}[N^{bS}]$ for the same group.
-
-To assess the methods further, we combined data from all of the 63386 patients, and also plotted the box plots for number of biopsies and offset in Figure \ref{fig : nbBoxPlot} and Figure \ref{fig : offsetBoxPlot} respectively. Based on the combined data, we observe that both expected and median failure time of GR based schedules have 91.7\% and 92.5\% of patients below offset cutoff of 36 months, respectively. They also have 80.5\% and 82.3\% of patients below a cutoff of 24 months. Thus they seem to be quite practical. The mixed approach offers another practically viable solution, since neither it has large $\mbox{var}[N^{bS}]$, nor $\mbox{var}[O^S]$. The estimated $E[N^{bS}]$ is 3.8 and the estimated $E[O^S]$ is 9.7 months. For 99.9\% patients it has an offset below 36 months and for 95\% patients it has an offset below 24 months. Given this offset and the fact that it conducts much less biopsies than PRIAS schedule, annual schedule, and dynamic risk of GR based schedules, it is preferable over them.
+The choice of the optimal schedule using (\ref{eq : loss_func_sim_study_generic}) depends on the chosen measures of efficacy. For e.g. schedule based on dynamic risk of GR is the most optimal if on average the least number of biopsies are to be conducted, while simultaneously making sure that at least 90\% of the patients have an average offset less than an year. Schedule based on expected time of GR is most optimal if on average the least number of biopsies are to be conducted, while simultaneously making sure that at least 80\% of the patients have an average offset less than 2 years. For at least 90\% of the patients it detects GR within 3 years with 2 biopsies on average. We however recommend the mixed approach, since it conducts only 3.8 biopsies on average while guaranteeing an offset of 24 months for 95\% of patients and of 36 months for 99.9\% of the patients. It also has the benefit if further cutoffs are required on variance of number of biopsies or offset they are not too high for it either.
